Fix the map container overflow issue

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,6 +16,12 @@ body, html {
   z-index:99;
 }
 
+#mainPanel {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 #mapContainer {
   height: 100%;
 }
